# PirateWallet-Lite

./: .gitignore  LICENSE  README.md  application.qrc  piratewallet-lite.pro  public_key.asc
.github/ISSUE_TEMPLATE/: issue_template.md
lib/: Cargo.toml  Makefile
lib/src/: lib.rs
res/: Info.plist  SIGNATURES_README  appdmg.json  arrr_qt_wallet_de.ts  arrr_qt_wallet_es.ts  arrr_qt_wallet_fr.ts  arrr_qt_wallet_it.ts  arrr_qt_wallet_pt.ts  arrr_qt_wallet_template.ts  arrr_qt_wallet_tr.ts  arrr_qt_wallet_zh.ts  piratewallet-lite.xpm  resize.sh
src/: about.ui  addressbook.cpp  addressbook.ui  balancestablemodel.cpp  balancestablemodel.h  connection.cpp  connection.h  connection.ui  controller.cpp  controller.h  createzcashconfdialog.ui  datamodel.cpp  datamodel.h  firsttimewizard.cpp  liteinterface.cpp  liteinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  migration.ui  mobileappconnector.ui  recurring.cpp  recurringmultiple.ui  requestdialog.cpp  requestdialog.ui  sendtab.cpp  settings.cpp  settings.ui  txtablemodel.cpp  viewalladdresses.cpp  viewalladdresses.h  websockets.cpp  websockets.h
src/scripts/: control  desktopentry  dobuild.ps1  dotranslations.sh  dounifiedbuild.ps1  mkmacdmg.sh  mkrelease.sh  mkwininstaller.ps1  pirate-qt-wallet.wxs  signbinaries.sh
src/scripts/docker/: Dockerfile
