[package]
name = "qtlib"
version = "0.1.0"
authors = ["MrLynch"]
edition = "2018"

[lib]
name = "arrrwalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
arrrwalletlitelib = { git = "https://github.com/MrMLynch/pirate-light-cli", rev = "4f95cbe362768385fdd1fa8c958d5b3452a64d71" }