[package]
name = "qtlib"
version = "0.1.0"
authors = ["MrLynch"]
edition = "2018"

[lib]
name = "arrrwalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
arrrwalletlitelib = { git = "https://github.com/MrMLynch/pirate-light-cli", rev = "50d262769384233d987c2522628190c1edf019c6" }